[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://SoundEffects/alarm.ogg" type="AudioStream" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/FiraCode-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = SubResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 380.0
margin_bottom = 580.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelClock" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 380.0
margin_bottom = 513.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "0000"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
margin_top = 517.0
margin_right = 380.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 4.0
percent_visible = false

[node name="SwitchViewButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 536.0
margin_right = 380.0
margin_bottom = 556.0
alignment = 1

[node name="TimerButton" type="Button" parent="MarginContainer/VBoxContainer/SwitchViewButtons"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
toggle_mode = true
pressed = true
text = "Timer"

[node name="GraphButton" type="Button" parent="MarginContainer/VBoxContainer/SwitchViewButtons"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "Graph"

[node name="ControlButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 560.0
margin_right = 380.0
margin_bottom = 580.0

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
margin_right = 188.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Start"

[node name="InterruptedButton" type="Button" parent="MarginContainer/VBoxContainer/ControlButtons"]
margin_left = 192.0
margin_right = 380.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Interrupted"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlButtons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ControlButtons/InterruptedButton" to="." method="_on_InterruptedButton_pressed"]
